<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/dialog_close_btn"
                    android:text="@string/dialog_title"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/close_btn"
                    android:id="@+id/dialog_close_btn"
                    android:layout_alignParentEnd="true"
                    />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_date"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/dialog_email_linear"
        android:padding="10dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_email"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_pick_up_text_view"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_pickup"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_destination_text_view"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_destiny"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/businessRequiredWeight"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_weight"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/businessFare"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_fare"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_status"
            />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/dialogButtonPay"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialogClose"
            />
    </LinearLayout>

</LinearLayout>