<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmBusinessActivity"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_business_relative1"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_pick_up_text_view"
            android:minWidth="130dp"
            android:id="@+id/businessPickUp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/businessPickUp"
            android:id="@+id/businessPickUpValue"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_business_relative2"
        android:layout_below="@+id/confirm_business_relative1"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_destination_text_view"
            android:minWidth="130dp"
            android:id="@+id/businessDestiny"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/businessDestiny"
            android:id="@+id/businessDestinyValue"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_business_relative3"
        android:layout_below="@+id/confirm_business_relative2"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businessRequiredWeight"
            android:minWidth="130dp"
            android:id="@+id/businessRequiredWeight"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/businessRequiredWeight"
            android:id="@+id/businessRequiredWeightValue"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_business_relative4"
        android:layout_below="@+id/confirm_business_relative3"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businessFare"
            android:minWidth="130dp"
            android:id="@+id/businessFare"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/businessFare"
            android:id="@+id/businessFareValue"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_business_relative5"
        android:layout_below="@+id/confirm_business_relative4"
        android:layout_marginTop="20dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/initial_pick_up_text_view"
            android:layout_centerHorizontal="true"
            android:id="@+id/myLorryPickUpBtn"
            />

    </RelativeLayout>



</RelativeLayout>